# randomstatsmodels

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  note.md  pyproject.toml  setup.cfg
.claude/: CLAUDE.md
examples/: _extract_tables.py  _test_sf.py  benchmark_all_speeds.py  benchmark_all_v31.py  benchmark_fast_models.py  benchmark_one_model.py  benchmark_slow_models.py  comprehensive_benchmark.py  run_ensemble_benchmark.py
randomstatsmodels/: __init__.py  presets.py
randomstatsmodels/benchmarking/: __init__.py  benchmarking.py  datasets.py  evaluation.py  statsforecast_wrappers.py
randomstatsmodels/metrics/: metrics.py
randomstatsmodels/models/: __init__.py  ensemble.py  ensemble_advanced.py  fourier.py  fracdiff.py  greens_kernel.py  holt_winters.py  hybrid.py  knn.py  koopman.py  local_linear.py  meld.py  model_utils.py  models.py  models_old.py  naive.py  neo.py  palf.py  pde_field.py  polymath.py  rift.py  spectral_gradient.py  ssa.py  theta_ar.py  variational_path.py
tests/: __init__.py  test_metrics.py  test_models.py  test_new_models.py
